<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:layout_margin="20dp">
<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/unologo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/AdressText"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:text="@string/library_address" />

    <TextView
        android:id="@+id/Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/Phone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:text="@string/building_hours" />

</LinearLayout>
</ScrollView>